src/objects/SurveyQuestionResponse__c.object
<CustomObject>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging.</description>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,&apos;NA&apos;))))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SurveyTaker__c</fullName>
        <label>SurveyTaker</label>
        <referenceTo>SurveyTaker__c</referenceTo>
        <relationshipName>Survey_Question_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Question_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to refer the question Id against the survey</description>
        <label>Survey Question Id</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Survey Question Responses (Survey Question Id)</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipName>Survey_Question_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging.</description>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Time_Question_was_Responded_to__c</fullName>
        <defaultValue>1</defaultValue>
        <label># of Time Question was Responded to</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Question Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <role>Central</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBK_Question_Responses</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MD__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filters>
        <label>MBK Question Responses</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBK_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Response-{0000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>